Updated intro.jpg and research interests description.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					</header>
 					<p>
 						Welcome to <strong>Nan</strong>'s homepage! I am currently a data scientist on the <a href="https://research.facebook.com/datascience/"><strong>Core Data Science</strong></a> team at Facebook.
-            I received my Ph.D. in Computer Science in September 2013, from the sunny UC Santa Barbara. My Ph.D. studies revolve around large-scale graph mining, data mining and applied machine learning. While studying in the beautiful Santa Barbara, I was also blessed with internship opportunities at Microsoft Research in Cambridge, UK, IBM Research in Yorktown Heights, NY and Microsoft Bing in Bellevue, WA. Prior to joining Facebook, I worked as a data scientist in the Applied Machine Learning group at Apple, as well as a data scientist on the Data Products and Research team at oDesk (now Upwork). 
+            I received my Ph.D. in Computer Science in September 2013, from the sunny UC Santa Barbara. My research interests lie in machine learning and its various applications. While studying in the beautiful Santa Barbara, I was also blessed with internship opportunities at Microsoft Research in Cambridge, UK, IBM Research in Yorktown Heights, NY and Microsoft Bing in Bellevue, WA. Prior to joining Facebook, I worked as a data scientist in the Applied Machine Learning group at Apple, as well as a data scientist on the Data Products and Research team at oDesk (now Upwork). 
 						<br>
 						My latest <strong>CV</strong> is <a href="NanLi_CV.pdf">here</a>, and my <strong>UCSB homepage</strong> is <a href="https://alumni.cs.ucsb.edu/~nanli/">here</a>.
 					</p>
@@ -59,8 +59,9 @@
 					<header>
 						<h2>Research Interests</h2>
 					</header>
-					<p>My research interests lie in the general topics of data mining and machine learning. I enjoy building a variety of statistical models and machine learning tools to solve interesting data problems, such as predictive modeling, personalized recommendations, user behavioral modeling, relevance ranking, and natural language processing.</p>
-					<p>From a computational point of view, I have worked on supervised learning, unsupervised learning and reinforcement learning problems. For supervised, I have played with various regression/classification algorithms alongwith feature engineering and regularization mechanisms. For unsupervised, I worked on topic models, regularized mixture models, graphical models and inference algorithms. In addition, I have experiences in Bayesian online learning and reinforcement learning through function approximation.</p>
+          <p>My research interests lie in the general topics of machine learning and data mining. I build a variety of machine learning models to solve interesting data problems, such as learning embeddings, search and ranking, information retrieval and recommender systems, and natural language processing. In my spare time, I enjoy learning about neural networks and deep learning. Some side projects on neural networks I contributed to can be found <a href="https://github.com/kchipman/neural-networks" style="color: black; text-decoration: none"><strong>here</strong></a>.</p>
+          <p> My projects at Facebook have been in the realm of general applied machine learning, including ranking systems, embedding models, text classification, video feature extraction and sequencing, spatial clustering and image contour detection.</p>
+					<p>In the past, I worked on various regression/classification algorithms along with feature engineering and regularization mechanisms. I also had experiences in topic modeling, regularized mixture models, graphical models, inference, Bayesian online learning and reinforcement learning through function approximation.</p>
 					<p>When I was a Ph.D. student, I designed probabilistic models and combinatorial algorithms for solving graph problems, ranging from graph indexing and querying, to graph anomaly detection. More specifically, I have worked on label-based subgraph matching via density indexing, attribute proximity computation using personalized PageRank aggregation, and vertex classification through graph augmentation and random walks. My research focus later switched to applying statistical modeling and applied machine learning for graph problems, such as using a regularized mixture model to uncover anomalous regions of a vertex-attributed graph in a principled manner.</p>
 				</div>
 				<a href="#pubs" class="button style2 down anchored">Next</a>
@@ -191,7 +192,7 @@
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>Copyright &copy; Nan Li 2016</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>Copyright &copy; Nan Li 2017</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</footer>
