Updated the current team info in index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<h2>Hey.</h2>
 					</header>
 					<p>
-						Welcome to <strong>Nan</strong>'s homepage! I am currently a Research Scientist on the <strong>Infra & Ranking @ News Feed Integrity</strong> team at Facebook.
+						Welcome to <strong>Nan</strong>'s homepage! I am currently a Research Scientist on the <strong>Messenger Ads Ranking</strong> team at Facebook, working on solving conversational AI problems using NLP.
             I received my Ph.D. in Computer Science in September 2013, from UC Santa Barbara. My research interests lie in machine learning and its various applications. While studying in the beautiful Santa Barbara, I was also blessed with internship opportunities at Microsoft Research in Cambridge, UK, IBM Research in Yorktown Heights, NY and Microsoft Bing in Bellevue, WA. Prior to joining Facebook, I worked as a data scientist in the Applied Machine Learning group at Apple, as well as a data scientist on the Data Products and Research team at oDesk (now Upwork). 
 						<br>
 						My latest <strong>CV</strong> is <a href="NanLi_CV.pdf">here</a>.
