Updated intro and CopyRight year

--- a/index.html
+++ b/index.html
@@ -42,17 +42,18 @@
 						<h2>Hey.</h2>
 					</header>
 					<p>
-						Welcome to <strong>Nan</strong>'s homepage! I am currently a Research Scientist on the <strong>Messenger Ads Ranking</strong> team at Facebook, working on solving conversational AI problems using NLP.
-            I received my Ph.D. in Computer Science from University of California, Santa Barbara. My research interests lie in machine learning and its various applications. While studying in the beautiful Santa Barbara, I was also blessed with internship opportunities at Microsoft Research in Cambridge, UK, IBM Research in Yorktown Heights, NY and Microsoft Bing in Bellevue, WA. Prior to joining Facebook, I worked as a data scientist in the Applied Machine Learning group at Apple, as well as a data scientist on the Data Products and Research team at oDesk (now Upwork). 
-						<br>
-						My latest <strong>CV</strong> is <a href="NanLi_CV.pdf">here</a>.
-            <!--and my <strong>UCSB homepage</strong> is <a href="https://alumni.cs.ucsb.edu/~nanli/">here</a>.-->
-					</p>
-					<footer>
-						<a href="#research" class="button style2 down">More</a>
-					</footer>
-				</div>
-			</section>
+          Welcome to <strong>Nan</strong>'s homepage! I am currently a Machine Learning Engineer on the <strong>Relevance & Personalization</strong> team at Airbnb, building deep neural models to improve Airbnb's homes search ranking. Prior to Airbnb, I was a Research Scientist on multiple ML teams at Facebook, where my work spanned across conversational automation using NLP and statistical modeling, optimizing human labeling workflows using generative models and model-assisted sampling, and various other predictive modeling projects. Before Facebook, I was a data scientist in the Applied Machine Learning group at Apple and on the Data Products and Research team at Upwork.  
+          <br>
+          I received my Ph.D. in Computer Science from University of California, Santa Barbara, where I did research in data mining and applied ML. While studying in the beautiful Santa Barbara, I was blessed with internship opportunities at Microsoft Research (Cambridge, UK), IBM Research and Microsoft Bing. 
+				  <br>
+				  My latest <strong>CV</strong> is <a href="NanLi_CV.pdf">here</a>.
+          <!--and my <strong>UCSB homepage</strong> is <a href="https://alumni.cs.ucsb.edu/~nanli/">here</a>.-->
+				  </p>
+				    <footer>
+				      <a href="#research" class="button style2 down">More</a>
+					  </footer>
+			   </div>
+		   </section>
 
 		<!-- Research -->
 			<section id="research" class="main style2 right dark fullscreen">
@@ -103,7 +104,7 @@
 			<section id="projects" class="main style3 primary">
 				<div class="content container">
 					<header>
-						<h2>Some Cool Projects I Worked On</h2>
+						<h2>Some Cool Projects I Worked on at UCSB</h2>
 						<p>My past projects include creating probabilistic models and algorithms to solve various graph mining problems, business optimization and customer lifetime value modeling, Bayesian online learning for user ranking, and so on. Here below are those I find particularly interesting:</p>
 					</header>
 
@@ -196,7 +197,7 @@
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>Copyright &copy; Nan Li 2019</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>Copyright &copy; Nan Li 2023</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</footer>
